# voice-agents

./: .env.example  .gitignore  ARCHER_LINE_AGENT_SETUP_COMPLETE.md  ARCHITECTURE.md  CLAUDE.md  DESIGN-CARTESIA-LINE-SYSTEM.md  PHASE_1_IMPLEMENTATION_REVIEW.md  README.md  docker-compose.yml
.conductor/: manifest.json
archer-line-agent/: .env.example  .gitignore  ARCHITECTURE.md  BACKEND_API_SPEC.md  DEPLOYMENT.md  MVP_QUICKSTART.md  README.md  config.py  main.py  pyproject.toml  requirements.txt
archer/backend/: .dockerignore  .env.example  CARTESIA_INTEGRATION_SUMMARY.md  Dockerfile  IMPLEMENTATION_FILES.md  IMPLEMENTATION_SUMMARY.md  PHASE_2A_REVIEW.md  PHASE_2A_SUMMARY.md  README.md  TESTING_CHECKLIST.md  alembic.ini  pyproject.toml
archer/backend/alembic/: env.py
archer/backend/alembic/versions/: 2024_10_30_1200-initial_schema.py  2025_10_30_1322_rename_metadata_to_extra_data.py
archer/backend/src/: __init__.py  main.py
archer/backend/src/agent/: agent.py
archer/backend/src/api/: calls.py  webhooks.py  websockets.py
archer/backend/src/models/: database.py  schemas.py
archer/backend/src/repositories/: call_repo.py  customer_repo.py
archer/backend/src/tools/: payment.py  verification.py
archer/backend/tests/: conftest.py  test_payment_tools.py  test_repositories.py  test_verification_tool.py
docs/: DESIGN_CONSIDERATIONS.md  IMPLEMENTATION_PLAN.md  INNOVATION_ARCHER_UI_AGENT.md  LATENCY_ANALYSIS.md  MIGRATION_FROM_ELEVENLABS.md  PERSISTENCE_STRATEGY.md  REPOSITORY_STRATEGY.md
scripts/: README.md  start_dev.py
