[project]
name = "archer-line-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "DeanSCND-Symend",email = "dskelton@symend.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cartesia-line>=0.1.3",
    "python-dotenv>=1.2.1",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
