[project]
name = "archer-line-agent"
version = "0.1.0"
description = "Simple conversational voice agent for Archer banking"
requires-python = ">=3.10"
dependencies = [
    "cartesia-line",
    "python-dotenv>=1.0.0",
    "fastapi",
    "uvicorn==0.35.0",
    "openai>=1.0.0",
    "loguru>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
